--- a/app/src/main/res/layout/layout_no_internet.xml
+++ b/app/src/main/res/layout/layout_no_internet.xml
@@ -7,28 +7,31 @@
     tool:ignore="UselessParent">
 
     <ImageView
+        android:id="@+id/image_view_wifi_off"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_portable_wifi_off_accent_50dp"
-        android:layout_above="@+id/txt_err_msg"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_portable_wifi_off_accent_50dp"/>
 
     <TextView
+        android:id="@+id/txt_err_msg"
+        style="@style/AppTheme.Normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/txt_err_msg"
-        android:text="@string/msg_internet_unavailable"
-        android:layout_centerInParent="true"
+        android:layout_below="@+id/image_view_wifi_off"
         android:gravity="center"
-        style="@style/AppTheme.Normal"/>
+        android:text="@string/msg_internet_unavailable"
+        android:textColor="@color/colorWhite" />
 
     <Button
+        android:id="@+id/btn_try_again"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_try_again"
-        android:text="@string/btn_try_again"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
+        android:background="@drawable/rounded_corner_border"
+        android:text="@string/btn_try_again"
+        android:textAllCaps="true"
+        android:textColor="@color/colorWhite" />
 
 </RelativeLayout>
