Login flow change achieved.
Web api error assumed as success.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,21 +11,19 @@
     TextureView, etc. -->
 
     <LinearLayout
-        android:id="@+id/login_wrapper"
+        android:id="@+id/register_wrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         android:orientation="vertical"
-        android:visibility="visible"
-        android:weightSum="1">
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".4"
+            android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingTop="@dimen/dp75">
+            android:paddingTop="@dimen/dp10">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -48,17 +46,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".6"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <include
-                android:id="@+id/wrapper_social_login"
-                layout="@layout/layout_login" />
-
-            <include
-                android:id="@+id/wrapper_app_rgistration"
-                layout="@layout/layout_app_registration" />
+                layout="@layout/layout_register" />
 
         </LinearLayout>
 
