Navigation option handling

--- a/app/src/main/res/layout/fragment_pending_order.xml
+++ b/app/src/main/res/layout/fragment_pending_order.xml
@@ -3,20 +3,18 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/ic_background">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/dp16">
+        android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/pending_order_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="#ffffff"
-            android:dividerHeight="6dp" />
+            android:layout_height="match_parent"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
