--- a/app/src/main/res/layout/order_item_row.xml
+++ b/app/src/main/res/layout/order_item_row.xml
@@ -1,61 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingTop="@dimen/dp16">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="@dimen/dp16"
+    android:layout_marginTop="@dimen/dp5"
+    android:layout_marginLeft="@dimen/dp5"
+    android:layout_marginStart="@dimen/dp5"
+    android:layout_marginEnd="@dimen/dp5"
+    android:layout_marginRight="@dimen/dp5">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="3">
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.75"
-            android:src="@mipmap/ic_launcher_round" />
+        android:orientation="vertical"
+        android:padding="@dimen/dp10">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.25"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:weightSum="3">
 
-            <TextView
-                android:id="@+id/order_details"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10 roses bunch XL+" />
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.75"
+                android:src="@mipmap/ic_launcher_round" />
 
-            <TextView
-                android:id="@+id/order_price_details"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="INR 300" />
+                android:layout_weight="1.25"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/order_schedule"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/order_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10 roses bunch XL+" />
+
+                <TextView
+                    android:id="@+id/order_price_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="INR 300" />
+
+                <TextView
+                    android:id="@+id/order_schedule"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Schedule 12th may 2017" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/order_status"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Schedule 12th may 2017" />
+                android:layout_weight="1"
+                android:text="Delivered" />
+
         </LinearLayout>
 
-        <Button
-            android:id="@+id/order_status"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/order_address"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Delivered" />
+            android:padding="16dp"
+            android:text="#9c 591 st main, 9th cross, Srinidhi Layout, Konanakunte, Bangalore" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/order_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="#9c 591 st main, 9th cross, Srinidhi Layout, Konanakunte, Bangalore" />
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
