--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="dp16">16dp</dimen>
     <dimen name="dp75">75dp</dimen>
     <dimen name="dp10">10dp</dimen>
+    <dimen name="dp5">5dp</dimen>
 
     <!-- Navigation drawer -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
