--- a/app/src/main/res/drawable-xxhdpi/flower_image_frame.xml
+++ b/app/src/main/res/drawable-xxhdpi/flower_image_frame.xml
@@ -9,9 +9,6 @@
     <!-- Border color and thickness -->
     <stroke
         android:width="1dp"
-        android:color="@color/colorWhite" />
-
-    <!-- corner radius -->
-    <corners android:radius="8dp" />
+        android:color="@color/colorPrimary" />
 
 </shape>
