--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F8BBD0</color>
+    <color name="colorPrimary">#EC407A</color>
     <color name="colorPrimaryDark">#F48FB1</color>
     <color name="colorPrimaryLight">#FCE4EC</color>
     <color name="colorAccent">#EC407A</color>
 
-    <color name="colorPrimaryDarkText">#000000</color>
-    <color name="colorPrimaryText">#87000000</color>
-    <color name="colorSecondaryText">#54000000</color>
-    <color name="colorDisableHintText">#38000000</color>
-    <color name="colorDivider">#13000000</color>
+    <color name="colorPrimaryDarkText">#ffffff</color>
+    <color name="colorPrimaryText">#87ffffff</color>
+    <color name="colorSecondaryText">#54ffffff</color>
+    <color name="colorDisableHintText">#38ffffff</color>
+    <color name="colorDivider">#13ffffff</color>
 
     <color name="black_overlay">#66000000</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorFB">#3F51B5</color>
     <color name="colorGoogle">#FFEE534E</color>
+    <color name="colorGreen">#45af45</color>
 
 </resources>
