--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,8 +7,12 @@
     <dimen name="dp75">75dp</dimen>
     <dimen name="dp10">10dp</dimen>
     <dimen name="dp5">5dp</dimen>
+    <dimen name="dp2">2dp</dimen>
 
     <!-- Navigation drawer -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="dp32">32dp</dimen>
+    <dimen name="dp150">150dp</dimen>
+    <dimen name="dp100">100dp</dimen>
 </resources>
