--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,6 @@
     <style name="FullscreenTheme" parent="AppTheme">
         <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
         <item name="android:windowActionBarOverlay">true</item>
-
         <item name="metaButtonBarStyle">?android:attr/buttonBarStyle</item>
         <item name="metaButtonBarButtonStyle">?android:attr/buttonBarButtonStyle</item>
     </style>
@@ -42,9 +41,9 @@
     </style>
 
     <style name="AppTheme.Normal" parent="AppTheme">
-        <item name="android:textAppearance">@android:style/TextAppearance.Small</item>
-        <item name="android:textColor">@color/colorSecondaryText</item>
-        <item name="android:padding">5dp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:padding">2dp</item>
     </style>
 
 </resources>
