--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.85"
-        android:scrollbars="none">
+        android:fadeScrollbars="false">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -193,14 +193,20 @@
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+            <Button
+                android:id="@+id/btn_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp16"
+                android:text="@string/lbl_register" />
         </LinearLayout>
     </ScrollView>
 
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/dp16"
-        android:layout_weight="0.15"
-        android:text="@string/lbl_register" />
+    <!--<Button-->
+        <!--android:id="@+id/btn_register"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_marginTop="@dimen/dp16"-->
+        <!--android:layout_weight="0.15"-->
+        <!--android:text="@string/lbl_register" />-->
 </LinearLayout>
