--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.85"
+        android:layout_weight="1"
         android:fadeScrollbars="false">
 
         <LinearLayout
@@ -53,22 +53,38 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/lbl_address">
+                android:orientation="horizontal"
+                android:weightSum="1">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/textview_address"
-                    android:layout_width="match_parent"
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_location_white_24dp"
-                    android:drawablePadding="@dimen/dp10"
-                    android:imeOptions="actionNext"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    android:layout_weight="0.9"
+                    android:hint="@string/lbl_address">
 
-            </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/textview_address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/ic_person_outline_white_24dp"
+                        android:drawablePadding="@dimen/dp10"
+                        android:imeOptions="actionNext"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+                </android.support.design.widget.TextInputLayout>
+
+                <ImageView
+                    android:id="@+id/image_view_locate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end|center_vertical"
+                    android:layout_weight="0.1"
+                    android:src="@drawable/ic_location_white_24dp"/>
+
+            </LinearLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -166,11 +182,17 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/textView_doc_upload"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:drawableTop="@drawable/ic_cloud_upload_white_24dp"
                         android:gravity="center"
                         android:text="Verification Doc" />
+
+                    <ListView
+                        android:id="@+id/list_view_doc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -185,14 +207,21 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/text_view_picture_upload"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:drawableTop="@drawable/ic_cloud_upload_white_24dp"
                             android:gravity="center"
                             android:text="Shop Picture" />
+
+                        <ListView
+                            android:id="@+id/list_view_picture"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+
             <Button
                 android:id="@+id/btn_register"
                 android:layout_width="match_parent"
@@ -203,10 +232,10 @@
     </ScrollView>
 
     <!--<Button-->
-        <!--android:id="@+id/btn_register"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_marginTop="@dimen/dp16"-->
-        <!--android:layout_weight="0.15"-->
-        <!--android:text="@string/lbl_register" />-->
+    <!--android:id="@+id/btn_register"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="0dp"-->
+    <!--android:layout_marginTop="@dimen/dp16"-->
+    <!--android:layout_weight="0.15"-->
+    <!--android:text="@string/lbl_register" />-->
 </LinearLayout>
